fix mobile overflow

--- a/style.css
+++ b/style.css
@@ -13,6 +13,7 @@
 
 * {
   box-sizing: border-box;
+  max-width: 100vw;
 }
 
 body {
@@ -51,7 +52,7 @@ main-content {
 }
 
 .push {
-  max-width: 1120px;
+  /* max-width: 1120px; */
   margin: 0 auto;
 }
 
@@ -87,7 +88,7 @@ main-content {
   grid-area: selector;
   cursor: pointer;
   float: right;
-  margin-right: -38px;
+  /* margin-right: -38px; */
   border-radius: 0;
   width: 75px;
   height: 150px;
@@ -260,4 +261,8 @@ a {
   /* font-size: small; */
   font-weight: normal;
   color: #232323;
+}
+
+* {
+  border: 1px red solid;
 }
